--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,11 +1,11 @@
 .footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 5em;
-    width: 100vw;
+    width: 99.1vw;
     background-color: #9ED5C5;
     border-top: 1px solid #000;
 }
